<resources>
    <string name="app_name">IMCApp</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="str_height">120 cm</string>
    <string name="weight">Peso</string>
    <string name="str_weight">60</string>
    <string name="age">Edad</string>
    <string name="str_age">20</string>
    <string name="tu_resultado">Tu resultado:</string>
    <string name="tv_resultado_numerico">Test</string>
    <string name="tv_resultado_texto">Test</string>
    <string name="tv_resultado_texto2">Placeholder para un texto largo.</string>
    <string name="peso_insuficiente">Peso insuficiente</string>
    <string name="peso_normal">Peso normal</string>
    <string name="demasiado_peso">Demasiado peso</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="text_insuficiente">Estas por debajo del IMC optimo para tu peso y altura.</string>
    <string name="text_normal">Estas justo en el IMC optimo para tu peso y altura.</string>
    <string name="text_pesoalto">Estas algo por encima del IMC optimo para tu peso y altura.</string>
    <string name="text_obesidad">Estas muy por encima del IMC optimo para tu peso y altura.</string>
    <string name="text_error_IMC">Ha habido un error, y no se ha calculado correctamente tu IMC. Vuelve a la pantalla anterior y vuelve a intentarlo.</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="re_calcular_imc">Re-calcular IMC</string>
</resources>