<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".ImcResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_resultado"
        android:text="@string/tu_resultado"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_resultado"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_resultado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_resultado_texto"
                android:layout_marginTop="20dp"
                android:text="@string/tv_resultado_texto"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/tv_resultado_numerico"
                android:text="@string/tv_resultado_numerico"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/tv_resultado_texto2"
                android:text="@string/tv_resultado_texto2"
                android:textColor="@color/white"
                android:textSize="30sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10sp"
        android:text="Re-calcular IMC"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="32sp"
        android:background="@color/bg_button"
        android:id="@+id/btn_recalcularIMC"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>